k8s/demo-scenarios/advance-scheduling.yaml
apiVersion: v1
kind: Pod
metadata:
  name: low-mem-pod
spec:
  priorityClassName: low-priority
  containers:
  - name: low
    image: busybox
    command: ["sh", "-c", "x=; while true; do x=$x$x$x$x; done"]
    resources:
      requests:
        memory: "12Mi"
      limits:
        memory: "12Mi"
---
apiVersion: v1
kind: Pod
metadata:
  name: high-mem-pod
spec:
  priorityClassName: high-priority
  containers:
  - name: high
    image: nginx
    resources:
      requests:
        memory: "56Mi"
      limits:
        memory: "56Mi"
