k8s/demo-scenarios/pdb.yaml
# Author: Sameed Shoaib
# Topic:  Pod disruption budget

apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: nginx
        image: nginx
